Instantiate DB connection each request, created new class for DB connections. Created Report class to store scrubbed DW text

--- a/db-configs.properties
+++ b/db-configs.properties
@@ -1,4 +1,5 @@
+POSTGRES_URL=jdbc:postgresql://maristdash.tk:5432/dash
 POSTGRES_USER=dash
 POSTGRES_PASSWORD=
-POSTGRES_DB=dash
 POSTGRES_ANALYTICS_TABLE=browser_analytics
+POSTGRES_REPORT_TABLE=browser_reports
