--- a/production.yml
+++ b/production.yml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile.production
     image: dash-browser-automation:0.1.0
+    restart: always
     ports:
       - "8080:8080"
     networks:
@@ -14,6 +15,7 @@ services:
     
   chrome:
     image: "selenium/standalone-chrome"
+    restart: always
     ports:
       - "4444:4444"
     networks:
