--- a/production.yml
+++ b/production.yml
@@ -22,8 +22,8 @@ services:
   chrome:
     image: "selenium/standalone-chrome"
     restart: always
-    ports:
-      - "4444:4444"
+    expose:
+      - "4444"
     networks:
       - dash-net
 
