Reconfiged db connection props

--- a/db-configs.properties
+++ b/db-configs.properties
@@ -1,4 +1,4 @@
-POSTGRES_URL=jdbc:postgresql://maristdash.tk:5432/dash
+POSTGRES_URL=jdbc:postgresql://db:5432/dash
 POSTGRES_USER=dash
 POSTGRES_PASSWORD=
 POSTGRES_ANALYTICS_TABLE=browser_analytics
