--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -4,7 +4,7 @@ COPY pom.xml /tmp/
 COPY db-configs.properties /tmp/
 COPY src /tmp/src/
 WORKDIR /tmp/
-RUN mvn package
+RUN mvn package -q
 
 FROM openjdk:8-jdk-alpine
 EXPOSE 8080
