--- a/production.yml
+++ b/production.yml
@@ -9,7 +9,7 @@ services:
     labels:
       - "traefik.docker.network=dash-net"
       - "traefik.enable=true"
-      - "traefik.basic.frontend.rule=Host:dash-browser-automation.maristdash.tk"
+      - "traefik.basic.frontend.rule=Host:dash-browser-automation.dev-maristdash.tk"
       - "traefik.basic.port=8080"
       - "traefik.backend=dash-browser-automation"
     ports:
