--- a/production.yml
+++ b/production.yml
@@ -9,7 +9,7 @@ services:
     labels:
       - "traefik.docker.network=dash-net"
       - "traefik.enable=true"
-      - "traefik.frontend.rule=Host:dash-browser-automation.speedegree.tk"
+      - "traefik.frontend.rule=PathPrefixStrip:/dash-browser-automation"
       - "traefik.port=8080"
       - "traefik.backend=dash-browser-automation"
     ports:
